# tree-sitter-mq

./: .gitignore  Cargo.toml  README.md  binding.gyp  grammar.js  package-lock.json  package.json  pnpm-lock.yaml  tree-sitter.json
.claude/: settings.local.json
.github/workflows/: ci.yml
bindings/node/: binding.cc  index.js
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: basic.txt  selectors.txt
