[package]
name = "tree-sitter-mq"
version = "0.1.0"
description = "mq grammar for tree-sitter"
authors = ["harehare"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "mq"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/harehare/mq"
edition = "2021"

build = "bindings/rust/build.rs"

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tree-sitter = "0.24"