[package]
authors = ["harehare"]
categories = ["parsing", "text-editors"]
description = "mq grammar for tree-sitter"
edition = "2021"
keywords = ["incremental", "parsing", "mq"]
license = "MIT"
name = "tree-sitter-mq"
readme = "README.md"
repository = "https://github.com/harehare/mq"
version = "0.1.1"

build = "bindings/rust/build.rs"

include = [
  "LICENSE",
  "bindings/rust/*",
  "./grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tree-sitter = "0.24"
