[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["parsing", "text-editors"]
description = "mq grammar for tree-sitter"
edition = "2024"
homepage = "https://mqlang.org"
keywords = ["incremental", "parsing", "mq"]
license = "MIT"
name = "tree-sitter-mq"
readme = "README.md"
repository = "https://github.com/harehare/tree-sitter-mq"
version = "0.1.3"

build = "bindings/rust/build.rs"

include = [
  "bindings/rust/*",
  "./grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tree-sitter = "0.24"
